# SPARQL-MCP-Kel-2

./: .gitattributes  .gitignore  ARCHITECTURE.md  DIAGRAMS.md  README.md  RELEASE_NOTES.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  main.js
frontend/src/components/: CodeSnippet.vue  EntityCard.vue  Header.vue
frontend/src/router/: index.js
frontend/src/views/: AboutView.vue  HomeView.vue
main/sparqlmcp-main/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SPARQL_queries.md  docker-compose.yml  pyproject.toml  requirements.txt
main/sparqlmcp-main/database/seed data/capec/: capec_latest.zip-output.ttl
main/sparqlmcp-main/database/seed data/cat/: ics-attack.json-output.ttl
main/sparqlmcp-main/database/seed data/cve/: nvdcve-1.1-2021.json.zip-output.ttl  nvdcve-1.1-2022.json.zip-output.ttl  nvdcve-1.1-2023.json.zip-output.ttl
main/sparqlmcp-main/frontend/: .env.example  README.md  package-lock.json
main/sparqlmcp-main/frontend/src/: style.css
main/sparqlmcp-main/frontend/src/components/: DocumentationCard.vue  EntityCard.vue  Footer.vue  GraphCanvas.vue  InfoPanel.vue  SearchBar.vue  SectionHeader.vue  SparqlAccordion.vue  StarBackground.vue  SuggestionChip.vue  TeamMemberCard.vue
main/sparqlmcp-main/frontend/src/data/: mockData.js
main/sparqlmcp-main/frontend/src/stores/: searchStore.js
main/sparqlmcp-main/frontend/src/views/: DocumentationView.vue  HomeView.vue  ResultsView.vue
main/sparqlmcp-main/src/sparql_mcp_server/: handlers.py  server.py  web.py
